cd(deployment): optimized image size, configurable port, fixed front configuration, deploy Github Action